# unique_identifier_msgs

./: CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  DCO_TEST.md  QUALITY_DECLARATION.md  README.md  mapping_rules.yaml  package.xml  unique_identifier_msgs-extras.cmake
cmake/Modules/: Finduuid.cmake
include/unique_identifier_msgs/: uuid_conversion.hpp
test/: test_uuid_coversion.cpp
