<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>unique_identifier_msgs</name>
  <version>2.5.0</version>
  <description>
    ROS messages for universally unique identifiers.
  </description>

  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/unique_identifier_msgs</url>

  <author email="brandon@openrobotics.org">Brandon Ong</author>
  <author>Jack O'Quin</author>
  <author email="jacob@openrobotics.org">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_core_generators</buildtool_depend>

  <exec_depend>rosidl_core_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="mapping_rules.yaml"/>
  </export>

</package>
